# ai-jupyter-base

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  ecs-task-definition.example.json
docker/: jupyter-entrypoint.sh
notebooks/: ai1.ipynb  example_notebook.ipynb  function.ipynb  gpt-example-1.ipynb  gpt-example-2.ipynb  gpt-example-3.ipynb  gpt-example-4.ipynb  gpt-example-5.ipynb  openai_client_example.ipynb  prompting_techniques.ipynb  pydantic_structured_output.ipynb  structured_output.ipynb
prompts/: jupyter-base-prompt.txt
src/jupyter_base/: __init__.py
src/jupyter_base/config/: __init__.py  env_lookup.py  openai_defaults.py  openai_key.py  paths.py  settings.py
src/jupyter_base/core/: __init__.py  models.py
src/jupyter_base/services/: __init__.py  openai_client.py  workflow.py
src/jupyter_base/utils/: __init__.py  text.py
tests/: conftest.py
tests/unit/: test_models.py  test_openai_client.py  test_openai_defaults.py  test_openai_key.py  test_settings.py  test_text.py  test_workflow.py
